@@ -2,6 +2,7 @@ Version 8.2 - xxx edition. 16 March 2020
 
 Added F key to toggle top cpu speed
 Added emulation of AY chip MIDI registers 14 & 15 and route them to an external MIDI device
+Added Visualmem for MMC Read/Write
 
 
 Improved Esxdos handler: 
